// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Navigation renders correctly when menu is toggled 1`] = `
<div>
  <nav
    class="open"
    css="[object Object]"
  >
    <ul>
      <li>
        <a
          href="/picture"
        >
          Overview
        </a>
      </li>
      <li>
        <a
          href="/series/shuttered"
        >
          »Shuttered«
        </a>
      </li>
      <li>
        <a
          href="/category/architecture"
        >
          Architecture
        </a>
      </li>
      <li>
        <a
          href="/category/environment"
        >
          Environment
        </a>
      </li>
      <li>
        <a
          href="/category/floral"
        >
          Floral
        </a>
      </li>
      <li>
        <a
          href="/category/light"
        >
          Light
        </a>
      </li>
      <li>
        <a
          href="/worldmap"
        >
          Worldmap
        </a>
      </li>
      <li>
        <a
          href="/imprint"
        >
          Contact
        </a>
      </li>
    </ul>
    <div>
      Menu
    </div>
  </nav>
</div>
`;

exports[`Navigation renders correctly with props 1`] = `
<div>
  <nav
    class="isFullscreen"
    css="[object Object]"
  >
    <ul>
      <li>
        <a
          href="/picture"
        >
          Overview
        </a>
      </li>
      <li>
        <a
          href="/series/shuttered"
        >
          »Shuttered«
        </a>
      </li>
      <li>
        <a
          href="/category/architecture"
        >
          Architecture
        </a>
      </li>
      <li>
        <a
          href="/category/environment"
        >
          Environment
        </a>
      </li>
      <li>
        <a
          href="/category/floral"
        >
          Floral
        </a>
      </li>
      <li>
        <a
          href="/category/light"
        >
          Light
        </a>
      </li>
      <li>
        <a
          href="/worldmap"
        >
          Worldmap
        </a>
      </li>
      <li>
        <a
          href="/imprint"
        >
          Contact
        </a>
      </li>
    </ul>
    <div>
      Menu
    </div>
  </nav>
</div>
`;

exports[`Navigation renders correctly without props 1`] = `
<div>
  <nav
    class=""
    css="[object Object]"
  >
    <ul>
      <li>
        <a
          href="/picture"
        >
          Overview
        </a>
      </li>
      <li>
        <a
          href="/series/shuttered"
        >
          »Shuttered«
        </a>
      </li>
      <li>
        <a
          href="/category/architecture"
        >
          Architecture
        </a>
      </li>
      <li>
        <a
          href="/category/environment"
        >
          Environment
        </a>
      </li>
      <li>
        <a
          href="/category/floral"
        >
          Floral
        </a>
      </li>
      <li>
        <a
          href="/category/light"
        >
          Light
        </a>
      </li>
      <li>
        <a
          href="/worldmap"
        >
          Worldmap
        </a>
      </li>
      <li>
        <a
          href="/imprint"
        >
          Contact
        </a>
      </li>
    </ul>
    <div>
      Menu
    </div>
  </nav>
</div>
`;
